<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Application -->
    <string name="app_name">\'Splay It</string>
    <string name="about">About</string>
     <string name="feedback">Feedback</string>

    <!-- Action Bar -->
    <string name="new_message">New Message</string>
    <string name="drawer_opened">Opened</string>
    <string name="drawer_closed">Closed</string>

    <!-- SplashActivity -->
    <string name="splay">Just \'Splay It</string>

    <!-- CreateMessageActivity -->
    <string name="title_activity_new_message">Make A \'Splay</string>
    <string name="first_question">Message:</string>
    <string name="hint">To Be Or Not To Be</string>
    <string name="second_question">Pick a Color:</string>
    <string name="red">Red</string>
    <string name="yellow">Yellow</string>
    <string name="orange">Orange</string>
    <string name="blue">Blue</string>
    <string name="green">Green</string>
    <string name="hello_world">Hello world!</string>

    <!-- PreviewActivity -->
    <string name="title_activity_preview">Step 2: Preview</string>

    <!-- ImageDisplayActivity -->
    <string name="title_activity_image_view">Image</string>

    <!-- TextDisplayActivity -->
    <string name="title_activity_view_carta">\'Splay it</string>

    <!-- Image Content Description -->
    <string name="image_description">A wonderful day to you!</string>
    <string name="title_activity_custom_color">CustomColorActivity</string>

    <!-- Temp Fragment -->
    <string name="temp_message">This collection isn\'t ready yet. We\'ll get to it soon.</string>
    <string name="temp_title">Woops!</string>

    <!-- UPDATED FORM CONTENT -->
    <string name="text_hint">Say Something Snappy</string>
    <string name="header_text_color">Text Color:</string>
    <string name="header_bg_color">Background Color:</string>
    <string name="form_header_text">Text:</string>
    <string name="preview_button">\'Splay It</string>
    <string name="save_button">Save It</string>
    <string name="edit_button">Save</string>
    <string name="cancel_button">Cancel</string>

    <string-array name="color_array">
        <item>Blue</item>
        <item>Green</item>
        <item>Orange</item>
        <item>Red</item>
        <item>Yellow</item>
    </string-array>
    <string-array name="text_array">
        <item>White</item>
        <item>Black</item>
    </string-array>

    <string name="title_activity_text_display_view_pager">\'Splay It</string>
    <string name="title_activity_text_pager_fragment">Text Pager Fragment</string>

    <string name="title_activity_edit">Edit</string>
    <string name="default_row_number"> </string>

    <string name="postive_button">Yes</string>
    <string name="negative_button">No</string>

    <string name="title_activity_about">About</string>
    <string name="action_settings">Settings</string>

    <!-- About Activity -->
    <string name="about_title">General</string>
    <string name="about_section_what">What\'s \'Splay?</string>
    <string name="about_section_what_desc">\'Splay - Short for display.</string>

    <string name="review_section_what">Review \'Splay</string>
    <string name="feedback_section">Provide Feedback</string>

    <string name="developer_title">Developer</string>
    <string name="developer_name">Author</string>
    <string name="developer_name_desc">Amha Mogus</string>

    <string name="developer_version">Version</string>
    <string name="developer_version_desc">\'Splay It - 0.3</string>

    <string name="about_app">About this app</string>
    <string name="edit">Edit</string>
</resources>
