<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".NewSplayActivity" >

	<RadioGroup    
	     android:id="@+id/color_selection"
	     android:layout_width="match_parent"
	     android:layout_height="wrap_content"
	     android:orientation="vertical"
	     android:paddingTop="5dp"
	     android:layout_marginTop="20dp" >

	     <RadioButton
	         android:id="@+id/red"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:checked="true"
	         android:text="@string/red" />

	     <RadioButton
	         android:id="@+id/orange"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:text="@string/orange" />

	     <RadioButton
	         android:id="@+id/yellow"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:text="@string/yellow" />

	     <RadioButton
	         android:id="@+id/blue"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:text="@string/blue" />
	     
	     <RadioButton
	         android:id="@+id/green"
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:text="@string/green" />
	 </RadioGroup>

	<Button
	    android:id="@+id/preview_btn"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:onClick="previewMessage"
	    android:layout_marginTop="20dp"
	    android:text="@string/preview_button" />
	
</LinearLayout>
