<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/preview"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PreviewActivity" >

    <TextView
        android:id="@+id/preview_text"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:text="@string/hello_world"
        android:textSize="60sp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_vertical|center_horizontal"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:divider="?android:attr/dividerHorizontal"
            android:showDividers="beginning"
            android:paddingTop="16dip">

    <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:measureWithLargestChild="true">

        <LinearLayout android:id="@+id/leftSpacer"
                      android:layout_weight="0.25"
                      android:layout_width="0dip"
                      android:layout_height="wrap_content"
                      android:orientation="horizontal"
                      android:visibility="gone" />

        <Button
                android:id="@+id/cancel_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:maxLines="2"
                android:text="@string/cancel_button"
                android:paddingTop="6dip"
                android:paddingBottom="6dip"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="cancelPreview"/>

        <Button
                android:id="@+id/save_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:text="@string/edit_button"
                android:paddingTop="6dip"
                android:paddingBottom="6dip"
                style="?android:attr/buttonBarButtonStyle"
                android:onClick="saveMessage"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>