<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="12dp"
    >

    <TextView
            android:id="@+id/form_view_bg_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:paddingTop="12dp"
            android:text="@string/header_bg_color" android:textStyle="bold"/>


    <RadioGroup android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/radioGroup"
                android:paddingTop="5dp"
                android:gravity="center_horizontal" android:layout_below="@+id/form_view_bg_header"
                android:layout_centerHorizontal="true">

        <RadioButton
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:id="@+id/redRadioButton"
                android:button="@null"
                android:background="@drawable/red_radio"
                android:checked="true" />

        <RadioButton
                android:id="@+id/blueRadioButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:button="@null"
                android:layout_marginLeft="5dp"
                android:background="@drawable/blue_radio" />

        <RadioButton
                android:id="@+id/yellowRadioButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:button="@null"
                android:layout_marginLeft="5dp"
                android:background="@drawable/yellow_radio" />

        <RadioButton
                android:id="@+id/orangeRadioButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:button="@null"
                android:layout_marginLeft="5dp"
                android:background="@drawable/orange_radio" />

        <RadioButton
                android:id="@+id/greenRadioButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:button="@null"
                android:layout_marginLeft="5dp"
                android:background="@drawable/green_radio" />

    </RadioGroup>

    <TextView
        android:id="@+id/form_view_message_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:paddingTop="15dp"
        android:text="@string/form_header_text"
        android:layout_below="@+id/radioGroup" android:textStyle="bold"/>
    
    <EditText
        android:id="@+id/form_view_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" 
        android:inputType="textCapSentences"
        android:hint="@string/text_hint"
        android:paddingTop="5dp"
        android:focusableInTouchMode="true"
        android:layout_below="@+id/form_view_message_header"
        android:windowSoftInputMode="stateVisible"
        android:imeOptions="actionDone">

        <requestFocus />
    </EditText>



    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:divider="?android:attr/dividerHorizontal"
            android:showDividers="beginning"
            android:paddingTop="16dip">

        <LinearLayout
                style="?android:attr/buttonBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:measureWithLargestChild="true">

            <LinearLayout android:id="@+id/leftSpacer"
                          android:layout_weight="0.25"
                          android:layout_width="0dip"
                          android:layout_height="wrap_content"
                          android:orientation="horizontal"
                          android:visibility="gone" />

            <Button
                    android:id="@+id/cancel_create"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_weight="1"
                    android:maxLines="2"
                    android:text="@string/cancel_button"
                    android:paddingTop="6dip"
                    android:paddingBottom="6dip"
                    style="?android:attr/buttonBarButtonStyle"
                    android:onClick="onFormCancel"/>

            <Button
                    android:id="@+id/save_create"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_weight="1"
                    android:text="@string/edit_button"
                    android:paddingTop="6dip"
                    android:paddingBottom="6dip"
                    style="?android:attr/buttonBarButtonStyle"
                    android:onClick="onFormSubmit"/>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
