<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingTop="12dp">

    <TextView
        android:id="@+id/editBgValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:paddingTop="12dp"
        android:text="@string/header_bg_color"
        android:textStyle="bold" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/radioGroupEdit"
        android:paddingTop="5dp"
        android:gravity="center_horizontal"
        android:layout_below="@+id/editBgValue"
        android:layout_centerHorizontal="true">

        <RadioButton
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/redRadioButtonEdit"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:button="@null"
            android:background="@drawable/red_radio"
            android:checked="true" />

        <RadioButton
            android:id="@+id/blueRadioButtonEdit"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:button="@null"
            android:layout_marginLeft="5dp"
            android:background="@drawable/blue_radio" />

        <RadioButton
            android:id="@+id/yellowRadioButtonEdit"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:button="@null"
            android:layout_marginLeft="5dp"
            android:background="@drawable/yellow_radio" />

        <RadioButton
            android:id="@+id/orangeRadioButtonEdit"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:button="@null"
            android:layout_marginLeft="5dp"
            android:background="@drawable/orange_radio" />

        <RadioButton
            android:id="@+id/greenRadioButtonEdit"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:button="@null"
            android:layout_marginLeft="5dp"
            android:background="@drawable/green_radio" />

    </RadioGroup>

    <!--<Spinner
            android:id="@+id/editColorSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/editBgValue"/>-->

    <TextView
        android:id="@+id/formHeaderText"
        android:layout_below="@+id/radioGroupEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:paddingTop="12dp"
        android:text="@string/form_header_text"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/editMessageValue"
        android:layout_below="@id/formHeaderText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textCapSentences"
        android:hint="@string/text_hint"
        android:paddingTop="5dp"
        android:focusableInTouchMode="true"
        android:windowSoftInputMode="stateVisible">

        <requestFocus />
    </EditText>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:divider="?android:attr/dividerHorizontal"
        android:showDividers="beginning"
        android:paddingTop="16dip">

        <LinearLayout
            style="?android:attr/buttonBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:measureWithLargestChild="true">

            <LinearLayout
                android:id="@+id/leftSpacer"
                android:layout_weight="0.25"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone" />

            <Button
                android:id="@+id/cancelEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_weight="1"
                android:maxLines="2"
                android:text="@string/cancel_button"
                android:paddingTop="6dip"
                android:paddingBottom="6dip"
                android:onClick="cancelEdit"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/editFormButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:text="@string/edit_button"
                android:paddingTop="6dip"
                android:paddingBottom="6dip"
                android:onClick="onEditRecord"
                style="?android:attr/buttonBarButtonStyle" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
